--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 # 这个文档包含了本博客的设定信息，你可以编辑它来个性化自己的博客，
 #
 
-# 你的博客名称，请用你想要的博客名替换“LOFFER”，以下修改都可类似处理
-# 注意，“name: LOFFER”，冒号后面的空格不可以省略。
+# 你的博客名称，请用你想要的博客名替换“FunnySeaman”，以下修改都可类似处理
+# 注意，“name: FunnySeaman”，冒号后面的空格不可以省略。
 # 井号后面的文字是说明文档，不会被程序读取。
 
 # 描述/签名
