--- a/_config.yml
+++ b/_config.yml
@@ -24,10 +24,10 @@ baseurl:
 #
 
 # 你的博客logo图片URL，建议尺寸不超过300px × 300px
-avatar: https://raw.githubusercontent.com/FromEndWorld/LOFFER/master/images/logo.png
+avatar: https://i.loli.net/2020/07/14/DFIlMridYnjR16H.png
 
 # 你的favicon（出现在浏览器tab上）图片URL，建议使用较小(64px × 64px)的图片
-favicon: https://raw.githubusercontent.com/FromEndWorld/LOFFER/master/images/favicon.png
+favicon: https://i.loli.net/2020/07/14/cuIQSqN3GMFKpkR.png
 
 
 # 菜单中的按钮
