--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ footer-text: Copyright (c) 2020 funnyseaman
 #
 
 # 输入Disqus shortname，即可添加评论区
-disqus: '' #shortname
+disqus:  #shortname
 
 # 输入Gitalk相关设定，即可添加评论区，具体请看教程
 gitalk:
